Added Project Page

--- a/projects.json
+++ b/projects.json
@@ -15,7 +15,8 @@
             ["images/TicTacToe/snapshot2_PvC_Impossible.png","Player vs Computer"],
             ["images/TicTacToe/snapshot3_GamePlay_Impossible.png","Gameplay - Impossible Game Board"]
         ],
-        "Description": "A simple Tic Tac Toe game that can be played against a computer or another player. The computer has 5 different levels of difficulty, ranging from easy to impossible. The game is played in the terminal and has colored titles and menus if ran with a compatible terminal."
+        "Description": "A simple Tic Tac Toe game that can be played against a computer or another player. The computer has 5 different levels of difficulty, ranging from easy to impossible. The game is played in the terminal and has colored titles and menus if ran with a compatible terminal.",
+        "Git_Link": "https://github.com/NathanSikkema/Tic-Tac-Toe"
         
     },
     {
@@ -30,9 +31,14 @@
             "Basic Graphics"
         ],
         "Snap_Shots": [
-            ["images/Cookie Clicker/snapshot1_GameWindow.png",""],
-            ["images/Cookie Clicker/snapshot2_GamePlay.png",""]
+            ["images/Cookie Clicker/snapshot1_GameWindow.png","Game Window"],
+            ["images/Cookie Clicker/snapshot2_GamePlay.png","Basic Gameplay"],
+            ["images/Cookie Clicker/snapshot_upgrades.png","Purchasable Upgrades"],
+            ["images/Cookie Clicker/snapshot_stats.png","Stats"],
+            ["images/Cookie Clicker/snapshot_Building_displays.png","Building Displays"],
+            ["images/Cookie Clicker/snapshot_buildings.png","Purchasable Buildings"]
         ],
-        "Description": "A remake of the cookie clicker game that allows the player to click on a cookie to bake cookies. The player can purchase buildings and upgrades to increase the amount of cookies they gain per click. The game has a stats window that displays the player's current stats and a basic graphics window that displays the game."
+        "Description": "A remake of the cookie clicker game that allows the player to click on a cookie to bake cookies. The player can purchase buildings and upgrades to increase the amount of cookies they gain per click. The game has a stats window that displays the player's current stats and a basic graphics window that displays the game.",
+        "Git_Link": "https://github.com/NathanSikkema/Cookie-Clicker"
     }
 ]
